// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component should call sorter function when sorter title is clicked 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1abm7iv-3 nYIxZ"
  >
    <div
      class="ant-pro-table"
    >
      <div
        class="ant-pro-card"
      >
        <div
          class="ant-pro-card-body"
          style="padding-top: 0px;"
        >
          <div
            class="ant-table-wrapper"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-middle"
                >
                  <div
                    class="ant-table-title"
                  >
                    Rotated
                  </div>
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                    >
                      <table
                        style="table-layout: auto;"
                      >
                        <colgroup />
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                            >
                              <div
                                class="styledComponents__RotatedColumn-sc-1abm7iv-0"
                              />
                            </th>
                            <th
                              class="ant-table-cell"
                            >
                              <div
                                class="styledComponents__RotatedColumn-sc-1abm7iv-0"
                              >
                                Name
                              </div>
                            </th>
                            <th
                              class="ant-table-cell ant-table-column-has-sorters"
                              tabindex="0"
                            >
                              <div
                                class="ant-table-column-sorters"
                              >
                                <span
                                  class="ant-table-column-title"
                                >
                                  Age
                                </span>
                                <span
                                  class="ant-table-column-sorter ant-table-column-sorter-full"
                                >
                                  <span
                                    class="ant-table-column-sorter-inner"
                                  >
                                    <span
                                      aria-label="caret-up"
                                      class="anticon anticon-caret-up ant-table-column-sorter-up"
                                      role="img"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="caret-up"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="0 0 1024 1024"
                                        width="1em"
                                      >
                                        <path
                                          d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                        />
                                      </svg>
                                    </span>
                                    <span
                                      aria-label="caret-down"
                                      class="anticon anticon-caret-down ant-table-column-sorter-down"
                                      role="img"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="caret-down"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="0 0 1024 1024"
                                        width="1em"
                                      >
                                        <path
                                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                </span>
                              </div>
                            </th>
                            <th
                              class="ant-table-cell ant-table-column-has-sorters"
                              tabindex="0"
                            >
                              <div
                                class="ant-table-column-sorters"
                              >
                                <span
                                  class="ant-table-column-title"
                                >
                                  Favorite Number
                                </span>
                                <span
                                  class="ant-table-column-sorter ant-table-column-sorter-full"
                                >
                                  <span
                                    class="ant-table-column-sorter-inner"
                                  >
                                    <span
                                      aria-label="caret-up"
                                      class="anticon anticon-caret-up ant-table-column-sorter-up"
                                      role="img"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="caret-up"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="0 0 1024 1024"
                                        width="1em"
                                      >
                                        <path
                                          d="M858.9 689L530.5 308.2c-9.4-10.9-27.5-10.9-37 0L165.1 689c-12.2 14.2-1.2 35 18.5 35h656.8c19.7 0 30.7-20.8 18.5-35z"
                                        />
                                      </svg>
                                    </span>
                                    <span
                                      aria-label="caret-down"
                                      class="anticon anticon-caret-down ant-table-column-sorter-down"
                                      role="img"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="caret-down"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="0 0 1024 1024"
                                        width="1em"
                                      >
                                        <path
                                          d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                </span>
                              </div>
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="1"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              venue 1
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              John
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              40
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              1
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="2"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              venue 2
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              Anne
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              33
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              10
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="3"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              venue 3
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              Will
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              55
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              5
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table component should render correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1abm7iv-3 fLDDjz"
  >
    <div
      class="ant-pro-table"
    >
      <div
        class="ant-pro-card"
      >
        <div
          class="ant-pro-card-body"
          style="padding-top: 0px;"
        >
          <div
            class="ant-table-wrapper"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-middle"
                >
                  <div
                    class="ant-table-title"
                  >
                    Basic
                  </div>
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                    >
                      <table
                        style="table-layout: auto;"
                      >
                        <colgroup />
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                            >
                              Name
                            </th>
                            <th
                              class="ant-table-cell"
                            >
                              Age
                            </th>
                            <th
                              class="ant-table-cell"
                            >
                              Address
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="1"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              John Doe
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              32
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              sample address
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="2"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              Jane Doe
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              33
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              new address
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="3"
                          >
                            <td
                              class="ant-table-cell"
                            >
                              Will Smith
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              45
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              address
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <ul
                  class="ant-pagination ant-pagination-mini ant-table-pagination ant-table-pagination-right"
                  unselectable="unselectable"
                >
                  <li
                    class="ant-pagination-total-text"
                  >
                      1-3 of 3 items
                  </li>
                  <li
                    aria-disabled="true"
                    class="ant-pagination-prev ant-pagination-disabled"
                    title="Previous Page"
                  >
                    <button
                      class="ant-pagination-item-link"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="left"
                        class="anticon anticon-left"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="left"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                          />
                        </svg>
                      </span>
                    </button>
                  </li>
                  <li
                    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                    tabindex="0"
                    title="1"
                  >
                    <a
                      rel="nofollow"
                    >
                      1
                    </a>
                  </li>
                  <li
                    aria-disabled="true"
                    class="ant-pagination-next ant-pagination-disabled"
                    title="Next Page"
                  >
                    <button
                      class="ant-pagination-item-link"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </button>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Table component should render selectable table and render action buttons correctly 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1abm7iv-3 fLDDjz"
  >
    <div
      class="ant-pro-table"
    >
      <div
        class="ant-pro-card"
      >
        <div
          class="ant-pro-card-body"
          style="padding-top: 0px;"
        >
          <div
            class="ant-pro-table-list-toolbar"
          >
            <div
              class="ant-pro-table-list-toolbar-container"
            >
              <div
                class="ant-pro-table-list-toolbar-left"
              >
                <div
                  class="ant-pro-table-list-toolbar-title"
                >
                  Selectable
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-table-wrapper"
          >
            <div
              class="ant-spin-nested-loading"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-middle"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                    >
                      <table
                        style="table-layout: auto;"
                      >
                        <colgroup>
                          <col
                            class="ant-table-selection-col"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell ant-table-selection-column"
                            >
                              <div
                                class="ant-table-selection"
                              >
                                <label
                                  class="ant-checkbox-wrapper"
                                >
                                  <span
                                    class="ant-checkbox"
                                  >
                                    <input
                                      class="ant-checkbox-input"
                                      type="checkbox"
                                      value=""
                                    />
                                    <span
                                      class="ant-checkbox-inner"
                                    />
                                  </span>
                                </label>
                              </div>
                            </th>
                            <th
                              class="ant-table-cell"
                            >
                              Name
                            </th>
                            <th
                              class="ant-table-cell"
                            >
                              Age
                            </th>
                            <th
                              class="ant-table-cell"
                            >
                              Address
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="1"
                          >
                            <td
                              class="ant-table-cell ant-table-selection-column"
                            >
                              <label
                                class="ant-checkbox-wrapper"
                              >
                                <span
                                  class="ant-checkbox"
                                >
                                  <input
                                    class="ant-checkbox-input"
                                    type="checkbox"
                                    value=""
                                  />
                                  <span
                                    class="ant-checkbox-inner"
                                  />
                                </span>
                              </label>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              John Doe
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              32
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              sample address
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="2"
                          >
                            <td
                              class="ant-table-cell ant-table-selection-column"
                            >
                              <label
                                class="ant-checkbox-wrapper"
                              >
                                <span
                                  class="ant-checkbox"
                                >
                                  <input
                                    class="ant-checkbox-input"
                                    type="checkbox"
                                    value=""
                                  />
                                  <span
                                    class="ant-checkbox-inner"
                                  />
                                </span>
                              </label>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              Jane Doe
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              33
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              new address
                            </td>
                          </tr>
                          <tr
                            class="ant-table-row ant-table-row-level-0"
                            data-row-key="3"
                          >
                            <td
                              class="ant-table-cell ant-table-selection-column"
                            >
                              <label
                                class="ant-checkbox-wrapper"
                              >
                                <span
                                  class="ant-checkbox"
                                >
                                  <input
                                    class="ant-checkbox-input"
                                    type="checkbox"
                                    value=""
                                  />
                                  <span
                                    class="ant-checkbox-inner"
                                  />
                                </span>
                              </label>
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              Will Smith
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              45
                            </td>
                            <td
                              class="ant-table-cell"
                            >
                              address
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
                <ul
                  class="ant-pagination ant-pagination-mini ant-table-pagination ant-table-pagination-right"
                  unselectable="unselectable"
                >
                  <li
                    class="ant-pagination-total-text"
                  >
                      1-3 of 3 items
                  </li>
                  <li
                    aria-disabled="true"
                    class="ant-pagination-prev ant-pagination-disabled"
                    title="Previous Page"
                  >
                    <button
                      class="ant-pagination-item-link"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="left"
                        class="anticon anticon-left"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="left"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                          />
                        </svg>
                      </span>
                    </button>
                  </li>
                  <li
                    class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
                    tabindex="0"
                    title="1"
                  >
                    <a
                      rel="nofollow"
                    >
                      1
                    </a>
                  </li>
                  <li
                    aria-disabled="true"
                    class="ant-pagination-next ant-pagination-disabled"
                    title="Next Page"
                  >
                    <button
                      class="ant-pagination-item-link"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <span
                        aria-label="right"
                        class="anticon anticon-right"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="right"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                          />
                        </svg>
                      </span>
                    </button>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
